--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,16 @@ button:hover {
 }
 
 footer {
+    display: flex;
+    gap: 10px;
+    align-items: center;
     text-align: center;
     font-family: Lato, sans-serif;
     font-size: 18px;
     padding: 20px 0;
     color:#6b6b6b;
+}
+
+.github:hover {
+    transform: scale(1.2);
 }
